--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,4 @@
 $orange: rgb(199, 102, 23);
 $orange_hover: rgba(199, 102, 23, 0.75);
 $orange_dis: rgba(199, 102, 23, 0.2);
+$main: rgb(49, 49, 49);
