cart, prod page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -91,6 +91,14 @@ html {
    position: relative;
 }
 
+.init {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+   height: 100vh;
+}
+
 .wrapper {
    min-height: 100vh;
    position: relative;
