--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -11,6 +11,8 @@
    flex: 1 1 auto;
    background-color: #fff;
    padding: 1.2rem 1.5rem;
+   display: flex;
+   flex-direction: column;
 }
 
 .nav {
