--- a/components/ProductsList/ProductsList.module.scss
+++ b/components/ProductsList/ProductsList.module.scss
@@ -4,5 +4,5 @@
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(25rem, auto));
    gap: 3.5rem 2.5rem;
-   padding: 0 2rem;
+   padding: 2rem;
 }
